# symfuscate

./: .gitignore  CMakeLists.txt  README.md
src/: Elf_Utils.c  Elf_Utils.h  Function_Resolver.h  Hashing.c  Hashing.h  Main.c
